<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">魔衣橱</string>
    <string name="buttonclick">Button Click</string>
    <string name="lblInputInfor">输入当前搭配方案的简介信息</string>
    <string name="lblNick">昵称:</string>
    <string name="catalogMenu_setting">应用设置</string>
    <string name="catalogMenu_feedback">意见反馈</string>
    <string name="catalogMenu_about">关于我们</string>
    <string name="latitude_menu1_left">春季</string>
    <string name="latitude_menu2_left">夏季</string>
    <string name="latitude_menu3_left">冬季</string>
    <string name="latitude_menu1_right">休闲</string>
    <string name="latitude_menu2_right">正装</string>
    <string name="type1">外套</string>
    <string name="type2">T恤</string>
    <string name="type3">毛衣</string>
    <string name="type4">衬衫</string>
    <string name="type5">裙子</string>
    <string name="type6">裤装</string>
    <string name="type7">配饰</string>
    <string name="type8">鞋子</string>
    <string name="type9">其它</string>
    <string name="share">分享到</string>
    <string name="follow">关注</string>
    <string name="mail">私信</string>
    <string name="notice">通知</string>
    <string name="common_detail">明细</string>
    <string name="common_warning">警告</string>
    <string name="common_ok">确定</string>
    <string name="common_cancel">取消</string>
    <string name="cancel_attention">取消关注</string>
    <string name="add_friend">加密友</string>
    <string name="add_blacklist">拉黑</string>
    <string name="remove_friend">取消密友</string>
    <string name="fans">粉丝</string>
    <string name="attention">关注</string>
    <string name="friend">密友</string>
    <string name="nick_name">昵称：</string>
    <string name="other">其他</string>
    <string name="myshow">我的秀</string>
    <string name="messagecentre">消息中心</string>
    <string name="moremessages">V</string>
    <string name="comments">评论</string>
    <string name="offence_report">举报</string>

    <string name="msg_exit">退出系统？</string>
    <string name="msg_show">在秀场显示</string>
    <string name="msg_delete">确定删除？</string>
    <string name="msg_comment_empty">请输入评论？</string>
    <string name="msg_comment_success">评论发送成功</string>
    <string name="msg_mail_empty">请输入私信？</string>
    <string name="msg_mail_success">私信发送成功</string>
    <string name="msg_offence_empty">请输入举报内容？</string>
    <string name="msg_offence_success">举报发送成功</string>
    <string name="modify_portrait">点击头像修改</string>
    <string name="msg_add_friend_success">添加密友成功</string>
    <string name="msg_attention_success">关注成功</string>
    <string name="msg_add_blacklist_success">添加到黑名单成功</string>
    <string name="msg_remove_attention_success">取消关注成功</string>
    <string name="msg_remove_friend_success">取消密友成功</string>

    <string name="lblNickName">昵称:</string>
    <string name="lblSignature">签名:</string>
    <string name="lblBirthday">生日:</string>
    <string name="lblGender">性别:</string>
    <string name="lblMail">邮箱验证:</string>
    <string name="lblMobile">手机验证:</string>
    <string name="bind_sn">绑定社交帐号</string>
    <string name="lblSina">新浪微博</string>
    <string name="lblTencent">腾讯微博</string>
    <string name="lblRenren">人人帐号</string>
    <string name="lblDouban">豆瓣帐号</string>
    <string name="common_nullpointer">空指针错误</string>
    <string name="lblError">错误</string>
    <string name="lblClose">关闭</string>
    <string name="msg_select_gender">请选择性别</string>

    <string name="no_network_connection_toast">网络无连接</string>
    <string name="msg_empty_describe">暂无描述信息</string>
    <string name="msg_adore">您已赞了此搭配</string>
    <string name="msg_load_show">秀场努力加载中</string>
    

</resources>