<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_bg">

    <FrameLayout
        android:id="@+id/mainFrame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottomBar"
        android:layout_marginBottom="-10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingTop="125dp">

            <ListView
                android:id="@+id/commentlist"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="35dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/member_bg"/>

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:scaleType="fitEnd"
                        android:src="@drawable/member_pho_box"/>

                    <ImageView
                        android:id="@+id/userportrait"
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:padding="2dp"
                        android:src="@drawable/member_pho"/>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/relativeLayout2"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/followuser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_left2_icon"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/follow"/>

                    <!--android:background="@drawable/function_btn_02"-->
                    <Button
                        android:id="@+id/mailuser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_right2_icon"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/mail"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/nickName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_toRightOf="@+id/relativeLayout2"
                    android:text="@string/lblNickName"
                    android:textColor="@color/black"/>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="54dp"
            android:layout_width="fill_parent"
            android:layout_alignParentTop="true"
            android:background="@drawable/top_bg"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnTopReturn"
                    android:background="@drawable/btn_return"
                    android:gravity="center_vertical|center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <include
        android:id="@+id/bottomBar"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        layout="@layout/detail_bottom"/>

</RelativeLayout>